# via-cep-cli

./: .gitignore  README.md  enderecos.txt  pyproject.toml
.pytest_cache/v/cache/: nodeids
via_cep_cli/: main.py
via_cep_cli/tests/: test_main.py
